# update-notes-extractor

./: README.md  pyproject.toml
update_notes_extractor/: __init__.py  main.py  prompts.py
