[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "update-notes-extractor"
version = "2025.12.21225744"
description = "update-notes-extractor is a package that extracts and structures release notes from software updates for easy, standardized, machine-readable summaries."
readme = "README.md"
authors = [{ name = "update-notes-extractor", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/update-notes-extractor"
